argo/downloads/nzbget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: downloads
spec:
  ports:
  - name: nzbget
    port: 6789
    protocol: TCP
  selector:
    app: nzbget
  type: ClusterIP
