argo/downloads/nzbget/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: nzbget
  namespace: downloads
spec:
  ingressClassName: traefik-internal
  rules:
  - host: nzbget.spenceops.com
    http:
      paths:
      - backend:
          service:
            name: nzbget
            port:
              number: 6789
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nzbget.spenceops.com
